--- a/Production/Frontend/static/css/style.css
+++ b/Production/Frontend/static/css/style.css
@@ -26,11 +26,14 @@ body {
   overflow: hidden;
   z-index: 4;
 }
-.card__orangeShine, .card__greenShine {
+
+.card__orangeShine,
+.card__greenShine {
   position: absolute;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .card__orangeShine {
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/279756/orange_shine.png);
   right: -150px;
@@ -40,6 +43,7 @@ body {
   width: 570px;
   height: 500px;
 }
+
 .card__greenShine {
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/279756/green_shine.png);
   left: 20%;
@@ -48,6 +52,7 @@ body {
   z-index: 1;
   width: 400px;
 }
+
 .card__year {
   font-family: 'Oswald', sans-serif;
   text-align: center;
@@ -59,6 +64,7 @@ body {
   position: relative;
   z-index: 2;
 }
+
 .card__thankyou {
   font-family: 'Oswald', sans-serif;
   position: absolute;
@@ -73,35 +79,43 @@ body {
   font-size: 20px;
   color: rgba(255, 255, 255, 0.5);
 }
-.card__circle, .card__smallCircle {
+
+.card__circle,
+.card__smallCircle {
   position: absolute;
   border-radius: 100%;
   background-image: linear-gradient(-239deg, #3B4576 0%, #242A48 59%);
   box-shadow: -10px -15px 90px 0 #191C41;
   z-index: 2;
 }
+
 .card__circle {
   right: 68px;
   bottom: 34px;
   width: 230px;
   height: 230px;
 }
+
 .card__smallCircle {
   right: 40%;
   top: -7%;
   width: 50px;
   height: 50px;
 }
+
 .card__outer-year {
   font-family: 'Orbitron';
 }
+
 .card__outer-year span {
   position: absolute;
   color: #fff;
   font-size: 16px;
   z-index: 4;
 }
-.card__outer-year span:nth-child(1):after, .card__outer-year span:nth-child(4):after {
+
+.card__outer-year span:nth-child(1):after,
+.card__outer-year span:nth-child(4):after {
   content: '';
   position: absolute;
   bottom: -2px;
@@ -109,26 +123,31 @@ body {
   width: 100%;
   border-bottom: 2px solid #fff;
 }
+
 .card__outer-year span:nth-child(1) {
   top: 35px;
   left: 35px;
 }
+
 .card__outer-year span:nth-child(2) {
   left: none;
   top: 35px;
   right: 35px;
 }
+
 .card__outer-year span:nth-child(3) {
   top: none;
   bottom: 35px;
   left: 35px;
 }
+
 .card__outer-year span:nth-child(4) {
   top: none;
   left: none;
   right: 35px;
   bottom: 35px;
 }
+
 .card__comet {
   position: relative;
   width: 8px;
@@ -136,18 +155,22 @@ body {
   background-color: #fff;
   border-radius: 100%;
 }
+
 .card__cometOuter {
   position: absolute;
   top: 30%;
   left: 25%;
 }
+
 .card__comet--second {
   right: -30px;
   top: -15px;
   -webkit-transform: scale(0.6);
-          transform: scale(0.6);
+  transform: scale(0.6);
 }
-.card__comet:before, .card__comet:after {
+
+.card__comet:before,
+.card__comet:after {
   content: '';
   position: absolute;
   left: 0;
@@ -156,19 +179,21 @@ body {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 27%, rgba(255, 255, 255, 0) 100%);
   border-radius: 20px;
   -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
+
 .card__comet:before {
   width: 18px;
   height: 70px;
   -webkit-transform-origin: -2px 13px;
-          transform-origin: -2px 13px;
+  transform-origin: -2px 13px;
 }
+
 .card__comet:after {
   width: 12px;
   height: 80px;
   -webkit-transform-origin: 0px 8px;
-          transform-origin: 0px 8px;
+  transform-origin: 0px 8px;
 }
 
 .source {
@@ -179,6 +204,7 @@ body {
   opacity: 0.5;
   font-size: 12px;
 }
+
 .source a {
   color: #000;
 }
